# src/configs/swagger.config.json
@@ -1065,6 +1065,343 @@
           }
         }
       }
+    },
+    "/api/service/create-service": {
+      "post": {
+        "tags": ["Service"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "formData",
+            "name": "name",
+            "type": "string", 
+            "example": "",
+            "description": "<desc>",
+            "required": true
+
+          },
+          {
+            "in": "formData",
+            "name": "description",
+            "type": "String",
+            "example": "",
+            "description": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+      "/api/service/update-service/{:_id}": {
+      "put": {
+        "tags": ["Service"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "_id",
+            "type": "string",
+            "required": true,
+            "example": "1",
+            "description": ""
+          },
+          {
+            "in": "formData",
+            "name": "name",
+            "type": "string",
+            "example": "example",
+            "description": ""
+          },
+          {
+            "in": "formData",
+            "name": "description",
+            "type": "string",
+            "example": "example",
+            "description": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+      "/api/service/delete-service/{:_id}": {
+      "delete": {
+        "tags": ["Service"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "path",
+            "name": "_id",
+            "type": "string",
+            "required": true,
+            "example": "1",
+            "description": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/service/get-list-service": {
+      "get": {
+        "tags": ["Service"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "query",
+            "name": "limit",
+            "type": "string",
+            "example": "10",
+            "description": ""
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "type": "string",
+            "example": "1",
+            "description": ""
+          },
+          {
+            "in": "query",
+            "name": "search",
+            "type": "string",
+            "example": "a",
+            "description": "Using to search for service's name "
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+      "/api/timeline/create-timeline": {
+      "post": {
+        "tags": ["Timeline"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+            "type": "string",
+            "required": true
+          },
+          {
+            "in": "formData",
+            "name": "name",
+            "type": "string",
+            "example": "axamp",
+            "description": "",
+            "required": true
+          },
+          {
+            "in": "formData",
+            "name": "description",
+            "type": "string",
+            "example": "",
+            "description": ""
+          },
+          {
+            "in": "formData",
+            "name": "dateTime",
+            "type": "date",
+            "example": "2023-11-14T00:00:00.000+00:00",
+            "description": "",
+            "required": true
+
+          },
+          {
+            "in": "formData",
+            "name": "location",
+            "type": "string",
+            "example": "",
+            "description": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+      "/api/timeline/update-timeline/{:_id}": {
+      "put": {
+        "tags": ["Timeline"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+            "type": "string",
+            "required": true
+
+          },
+          {
+            "in": "formData",
+            "name": "name",
+            "type": "string",
+            "example": "axamp",
+            "description": ""
+          },
+          {
+            "in": "formData",
+            "name": "description",
+            "type": "string",
+            "example": "",
+            "description": ""
+          },
+          {
+            "in": "formData",
+            "name": "dateTime",
+            "type": "date",
+            "example": "2023-11-14T00:00:00.000+00:00",
+            "description": ""
+
+          },
+          {
+            "in": "formData",
+            "name": "location",
+            "type": "string",
+            "example": "",
+            "description": ""
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+      "/api/timeline/delete-timeline/{:_id}": {
+      "delete": {
+        "tags": ["Timeline"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+            "type": "string",
+            "required": true
+
+          },
+          {
+            "in": "path",
+            "name": "_id",
+            "type": "string",
+            "example": "1",
+            "description": "",
+            "required": true
+
+          }
+        
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+      "/api/timeline/get-list-timeline": {
+      "get": {
+        "tags": ["Timeline"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
+            "type": "string",
+            "required": true
+
+          },
+            {
+            "in": "query",
+            "name": "limit",
+            "type": "string",
+            "example": "10",
+            "description": ""
+          },
+          {
+            "in": "query",
+            "name": "page",
+            "type": "string",
+            "example": "1",
+            "description": ""
+          },
+          {
+            "in": "query",
+            "name": "search",
+            "type": "string",
+            "example": "examp",
+            "description": ""
+          },
+          {
+            "in": "query",
+            "name": "location",
+            "type": "string",
+            "example": "axamp",
+            "description": ""
+          },
+               {
+            "in": "query",
+            "name": "dataTime",
+            "type": "string",
+            "example": "2023-11-14",
+            "description": ""
+          }
+          
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
+  
 }
